tests/machine/x/scala/cross_join_triple.error
exit status 1
/workspace/mochi/tests/machine/x/scala/cross_join_triple.scala:9: error: value n is not a member of scala.collection.immutable.Map[Any,Any]
      println(c.n + " " + c.l + " " + c.b)
                ^
/workspace/mochi/tests/machine/x/scala/cross_join_triple.scala:9: error: value l is not a member of scala.collection.immutable.Map[Any,Any]
      println(c.n + " " + c.l + " " + c.b)
                            ^
/workspace/mochi/tests/machine/x/scala/cross_join_triple.scala:9: error: value b is not a member of scala.collection.immutable.Map[Any,Any]
      println(c.n + " " + c.l + " " + c.b)
                                        ^
three errors found
